--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,7 +12,7 @@
                   <li> <a routerLink="/services" class="nav-link">Service</a></li>
                   <li> <a routerLink="/about" class="nav-link">About</a></li>
               <div ngbDropdown class="d-inline-block show__menu">
-                  <li> <a id="dropdownBasics" ngbDropdownToggle routerLink="">Login/SignUp</a></li>
+                  <li> <a id="dropdownBasics" ngbDropdownToggle>Login/SignUp</a></li>
                  <div ngbDropdownMenu aria-labelledby="dropdownBasics">
                    <ul>
                      <li> <a class="dropdown__menu" ngbDropdownItem4  (click)="open(content)">LogIn</a></li>
