--- a/src/app/about/career-list/career-list.component.html
+++ b/src/app/about/career-list/career-list.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid new-join-header">
   <div class="header-container row">
       <div class="header-col col-sm">
-        <div _ngcontent-c2="" class="logo"><a _ngcontent-c2="" routerLink="/home"><img class="header_logo new__logo" src="assets/images/spo-simple-write.png" alt="ZocDoc Logo"></a></div>
+        <div class="logo"><a routerLink="/home"><img class="header_logo new__logo" src="assets/images/spo-simple-write.png" alt="ZocDoc Logo"></a></div>
       </div>
   </div>
 </div>
