--- a/src/styles.css
+++ b/src/styles.css
@@ -2,485 +2,6 @@
 @import "~ng-pick-datetime/assets/style/picker.min.css";
 @import '@angular/material/prebuilt-themes/deeppurple-amber.css';
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
-
-*{margin:0; padding: 0;}
-
- /* font Face */
- body{font-family: 'Open Sans'; color:#343333; font-size: 16px;}
- a:hover{text-decoration: none;}
- img{max-width: 100%;}
-
- /* Header */
-header{background:url(assets/images/headerbg.jpg)no-repeat; background-size: cover; padding: 40px 0 10px;}
-/* Header log 09May2019 */
-img.header_logo {width: 50%;}
-/* Header logo end 09may2019 */
-.top_header{display: flex; justify-content: space-between;}
-.top_header .logo a{ font-family: 'Aller'; font-weight: bold; color: #ffffff; font-size: 41px; text-transform: uppercase;}
-.top_right ul{display: flex; list-style-type: none;}
-.top_right ul li a{display: block;font-size: 15px; color: #fff !important;border: 1px solid #93999d; padding: 10px 25px; margin-left: 15px;}
-.top_right ul li a:hover{text-decoration: none; background: #06b09a; color: #fff !important; border-color:#06b09a; cursor: pointer;}
-.top_right ul li.active a{background: #06b09a; color: #fff; border-color:#06b09a;}
-.middle_header {padding-top:145px; padding-bottom: 250px;}
-.middle_header h1{ font-family: 'Raleway'; font-size: 60px; text-transform: uppercase; font-weight: 700; color: #fff; padding-bottom: 10px;}
-.middle_header h6{font-size: 20px; text-transform: uppercase; font-weight: 600; color: #fff; padding-bottom: 27px;}
-.middle_header .form-group{background-color: #6d727a; display: flex;     max-width: 92%;    padding: 12px;     margin: 0 auto;justify-content: space-around;}
-.middle_header .form-group input{font-size: 15px; color: #817f7f; font-weight:600; max-width: 230px;
-    border-radius: 0;border-color: transparent; height: 54px;}
-.middle_header .form-group .btn{border:0;width: 160px; font-size: 15px; color: #fff; font-weight:600; border-radius: 0;border-color: transparent; height: 54px;background: #06b09a; }
-#hospital_schedule .box{padding:63px 45px;}
-#hospital_schedule{margin-top: -150px;    margin-bottom: 67px;}
-#hospital_schedule .left{background:url(assets/images/left_side.png)no-repeat; background-size: 100%; }
-#hospital_schedule .right{background:url(assets/images/right_side.png)no-repeat; background-size: 100%; }
-#hospital_schedule .box p{ font-size: 16px; color: #fff; font-weight: 600; text-transform: uppercase; padding-top: 15px; max-height: 63px; height: 100%;}
-#hospital_schedule .box a{font-size: 16px;font-weight: 600; color: #fff; background: #06a792; padding: 10px 18px;}
-#feature_section{background:url(assets/images/featurebg.jpg)no-repeat; background-size: cover; padding-top:67px; }
-.feature_right h2{font-size: 56px; font-weight: 600; color: #fff}
-.feature_right p{font-size:16px; color:#fff; font-weight:400;padding-bottom: 12px;}
-.feature_right ul{list-style-type: none;    padding-bottom: 15px;}
-.feature_right ul li{background:url(assets/images/dot.png)no-repeat; color: #fff;padding-left: 30px;     background-position: 1%;}
-.list_btn a{    background: #06b09a; color: #fff; border-color: #06b09a; border-radius: 0; font-size: 15px; color: #fff; border: 1px solid #93999d; padding: 10px 25px; }
-.feature_right{ padding: 38px 10px 38px 40px;}
-#download_app{background:url(assets/images/download_app.jpg)no-repeat; background-size: cover; padding-top:45px;}
-.download_app_left{padding-top: 28px;}
-.download_app_left h2{color: #06b09a; font-family: 'Raleway'; font-weight: 700; font-size: 56px;}
-.download_app_left ul{list-style-type: none; margin-bottom: 8px;}
-.download_app_left ul li{background:url(assets/images/black_dot.png)no-repeat; color: #fff;padding-left: 30px; background-position: 1%;color: #161616; font-weight: 600;}
-.download_app_left ul li:last-child{background: none; padding: 0; padding-top: 20px;}
-.send_link .form-group {display: flex;}
-.send_link .form-group input{max-width: 205px; height: 42px; background: #06b09a; color: #fff; border-radius: 0;}
-.send_link .form-group input::placeholder{color: #fff;}
-.send_link .form-group .btn{max-width: 142px; height: 42px;  border-radius: 0;background: #07907e;}
-.smart_btn{padding-top: 15px;}
-.smart_btn img{margin-left:5px;}
-#patients_testimonial{padding: 55px 0 70px; background: #fafafa;}
-.patients_testimonial h2{font-size: 56px; color: #06b09a; font-family: 'Raleway'; font-weight: 700;}
-.patients_testimonial a{background: #27baa7; padding: 13px 50px; color: #fff; max-width: 290px; margin: 0 auto; display:block;}
-.patients_testimonial p{padding: 0 15px; padding-bottom: 7px; padding-top: 5px;}
-.partners .owl-dots{display: none;}
-.partners .owl-theme .owl-nav [class*=owl-]{margin:0;}
-.partners .owl-theme .owl-nav{padding-top: 27px;}
-.partners button span{    color: #27baa7 !important; border: 1px solid #27baa7 !important; border-radius: 0px !important;
-    font-size: 32px !important; padding: 1px 26px; display: block;}
-.partners{margin-top: 30px;}
-#specialist{padding: 55px 0;}
-#specialist h2{    color: #121212; font-size: 30px; padding-bottom: 17px;}
-#specialist .doctors_details{display: flex; justify-content: space-between; background: #27baa7;
-    color: #fff; }
-#specialist .doctors_details h3{font-size: 22px; font-weight: bold; margin:0;  padding-left: 30px; padding-top: 15px;}
-#specialist ul a{font-size: 14px; color: #27baa7;    line-height: 29px;}
-#specialist ul{list-style-type: none; padding: 15px 30px;}
-.doctor_detail{border: 1px solid #f2f2f2;max-height: 598px; height:100%;}
-.doctors_details h6{height: 59px; width: 62px;  text-align: center;  margin: 0; background: #1eab99;}
-.doctors_details h6 img{ position: relative; top: 13px;}
-#post_job{background:url(assets/images/job_bg.jpg)no-repeat; background-size: cover; padding: 85px 0;}
-.job_text h2{font-size: 56px; font-weight: bold; color: #27baa7; font-family: 'Raleway';    padding-bottom: 15px;}
-.ble_btn{background: #27baa7; padding: 13px 50px; color: #fff; max-width: 290px; display: block;}
-.job_text p, .job_text .check_btn{padding-bottom: 8px;}
-.need_help {    background: #27baa7;padding: 38px 0;}
-.need_help h2{font-size: 28px; color: #fff; font-weight: 600; margin:0;}
-.need_help h2 span{    text-decoration: underline;}
-.footer{padding:48px 0;}
-.footer h3{color: #0e2c4e; font-size: 22px; font-weight: 600; font-family: 'Raleway'; padding-bottom: 15px;}
-.footer ul li a{font-size: 14px; color: #27baa7;}
-.footer ul li{ line-height: 25px;}
-.footer ul{list-style-type: none;}
-.footer_img{padding-top:15px;}
-.copyright{background: #27baa7; padding: 30px 0;}
-.copyright .copy_section{display:flex; justify-content: space-between;}
-.copyright .copy_section ul{display: flex; list-style-type: none; margin:0;}
-.copyright .copy_section p, .copyright .copy_section ul a{color:#fff; margin:0;}
-.copyright .copy_section ul a{margin: 0 17px;}
-/*04-04-2019 Start*/
-.owl-nav button span{
-  color: #27baa7 !important;
-  border: 1px solid #27baa7 !important;
-  border-radius: 0px !important;
-  font-size: 32px !important;
-  padding: 1px 26px;
-  display: block;}
-    .owl-carousel .owl-stage {
-      margin-top: 13px;
-  }
-
-/*End*/
-/*08-04-2019 Start */
-.top_right ul li {
-    display: flex !important;
-}
-/*End*/
-/* 29 - 4 - 2019 */
-.format__calender {margin-left: -65px;font-size: 28px !important;margin-top: 15px; }
-.mat-form-field-infix input {background: #fff;}
-.dropdown-menu.show{background:transparent;border:0px;}
-.dropdown-menu.show ul li:first-child a{margin-left:0;}
-.mat-form-field-infix {border: 0;padding: 0 !important;}
-.doctor_mat .mat-form-field-infix{width: 320px;}
-.doctor_mat .mat-form-field-infix .first_input{max-width:100%;padding: 5px;text-align:center;}
-.mat_icon_search{margin-top: -36px;z-index: 100000;float: right;font-size: 28px;}
-.modal h3{text-align: center; font-size: 40px; font-weight: 600; text-transform: uppercase;}
- button.close {margin-right: -56px;font-size: 46px;margin-top: -43px;}
- /*30-04-2019* end*/
- button.btn.btn-primary.button__form{width: 100%;background: #06b09a;font-size: 18px;}
- .loginSignUpSeparator { border-top: 1px solid #cbd2d6;position: relative;margin: 25px 0 10px;text-align: center;}
-.loginSignUpSeparator .textInSeparator {background-color: #fff;padding: 0 .5em;position: relative;color: #6c7378;top: -.7em;}
-/*01-05-2019 Start joinzocDoc*/
-.container-fluid.new-join-header {
-    width: 100%;
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-right: auto;
-    margin-left: auto;
-}
-.new-join-header .header-col {
-  padding: 10px 15px;
-    display: flex;
-    flex-flow: row;
-    justify-content: space-between;
-    align-items: center;
-}
-.new-join .new-join-carousel {
-  position: relative;
-}
-.new-join .new-join-carousel {
-  position: relative;
-}
-.container-fluid.new-join-header .cta-container {
-  margin: 20px 0;
-}
-.text-col .slide-headline {
-  font-size: 20px;
-  line-height: 28px;
-  margin-bottom: 16px;
-  font-family: 'sharp-sans-bold', Arial, sans-serif;
-  color: #06b09a;
-}
-.cta-container.list__zocdoc {
-  text-align: center;
-  width: 100%;
-}
-.col.order-md-last .image__slide {
-  width: 250px;
-  margin: auto;
-  margin-right: 284px;
-}
-.image__slide {
-  width: 250px;
-  margin: auto;
-  display: block;
-}
-img.img-fluid.image_contain {
-  display: block;
-  margin: 0 auto 18px;
-  height: 80px;
-  width: 80px;
-  background: #06b09a;
-}
-.content_title_heading p.slide-body {
-  color: #06b09a;
-}
-.values-row.row.max-width {
-  margin: 50px auto;
-}
-.cta-container {
-  text-align: center;
-  margin-bottom: 30px;
-  margin-top: 30px;
-}
-button.owl-dot {
-  margin-bottom: 30px;
-}
-.new__join h2 {
-  margin-top: 18px;
-}
-a.cta {
-  background-color: #06b09a;
-  border: solid 1px transparent;
-  border-radius: 0px;
-  padding: 16px 30px;
-  font-size: 16px;
-  color: #fff !important;
-  font-family: "sharp-sans-medium", Arial, sans-serif;
-  cursor: pointer;
-}
-.wFormContainer {
-  margin: 0px auto;
-}
-.inputWrapper {
-  box-sizing: border-box;
-    max-width: 100%;
-  vertical-align: top;
-    position: relative;
-  }
-  .oneField.field-container-D {
-  max-width: 100%;
-  margin: 14px;
-  }
-  .new__join h2 {
-      font-size: 34px;
-      line-height: 44px;
-      padding-bottom: 20px;
-      font-family: 'sharp-sans-bold', Arial, sans-serif;
-  }
-  input.exclude-from-playback.required {
-    width: 306px;
-    height: 44px;
-    padding: 0 10px;
-    color: #00234B;
-    background-color: #dce7f2;
-    border: transparent;
-    border-radius: 3px;
-    margin: 14px auto 20px;
-}
-.primaryAction.zocdoc__form_submit {
-  height: auto;
-  width: auto;
-  vertical-align: middle;
-  background-color: #06b09a;
-  padding: 17px 76px;
-  opacity: 1;
-  color: #ffffff;
-  border: none;
-  display: block;
-  margin: 44px auto 24px;
-  cursor: pointer;
-  font-size: 18px;
-  border-radius: 0px;
-  font-family: "sharp-sans-semibold", Arial, sans-serif;
-}
-label.label.preField.reqMark {
-  font-size: 18px;
-  font-family: "sharp-sans-semibold", Arial, sans-serif;
-}
-/*start zocdoc join 02-05-2019*/
-.text-col.col-sm.order-sm-last.zocdoc_content h1 {
-  font-size: 40px;
-    line-height: 56px;
-    font-family: 'sharp-sans-bold', Arial, sans-serif;
-    font-weight: 700;
-    padding-bottom: 20px;
-    margin-top: 170px;
-    color: #06b09a;
-}
-.text-col.col-sm.order-sm-last.zocdoc_content h2 {
-  font-size: 20px;
-  line-height: 29px;
-  padding-bottom: 20px;
-  font-family: 'sharp-sans-medium', Arial, sans-serif;
-  float: left;
-}
-.col-sm.text-center .zocdoc__heading {
-  font-family: 'sharp-sans-bold', Arial, sans-serif;
-  font-weight: 700;
-  padding-bottom: 20px;
-  margin-top: 39px;
-  color: #06b09a;
-}
-img.img-fluid.green-blob {
-  position: absolute;
-  right: 0;
-  bottom: -25px;
-  width: 500px;
-  z-index: -999;
-}
-.col.order-md-last.content__image {
-  width: 50%;
-  float: right;
-}
-.col.text-col.order-md-first.content_title_heading {
-  width: 50%;
-  float: left;
-  padding-top: 150px;
-  padding-left: 170px;
-}
-.owl-dot.active span {
-  background: #06b09a !important;
-}
-.new-join-carousel .owl-theme .owl-nav {
-  position: absolute;
-  top: 50%;
-  width: 100%;
-}
-.new-join-carousel  .owl-nav .owl-prev {
-    float: left;
-    position: relative;
-    left: 25px;
-    bottom: 79px;
-}
-.new-join-carousel  .owl-nav .owl-next {
-  float: right;
-position: relative;
-bottom: 79px;
-}
-input#insurance_number {
-  pointer-events: none;
-}
-.forgotLink {
-  text-align: center;
-}
-.conatiner.new-join-card {
-  display: flex;
-  margin-top: 30px;
-}
-.card.new-card {
-  border-radius: 10px;
-    border: 2px solid #bbb;
-    margin: 10px 10px 30px 10px;
-    padding: 10px;
-    overflow: hidden;
-    width: 30%;
-    height: 300px;
-    box-shadow: 0 4px 4px 0 #DADADA;
-    max-width: 300px;
-}
-.col-sm.text-center.new_join__text {
-  margin-top: 40px;
-  color: #06b09a;
-}
-section.zocdoc_join_form {
-  margin-top: 55px !important;
-}
-.new__join {
-  margin-top: 40px;
-  color: #06b09a;
-}
-.description img {
-  margin: auto;
-  width: 90px;
-  display: block;
-}
-p.doctor_name strong {
-  font-size: 18px;
-  line-height: 48px;
-  margin-top: 17px;
-  margin-bottom: 14px;
-  font-family: "sharp-sans-bold", Arial, sans-serif;
-  text-align: center;
-  width: 100%;
-  margin: 0px auto;
-  display: block;
-  color: #06b09a;
-}
-p.provider-bio.text-center {
-  font-size: 13px;
-  line-height: 18px;
-  margin-bottom: 13px;
-  font-family: "sharp-sans-semibold", Arial, sans-serif;
-}
-p.card_decription_card {
-  font-size: 14px;
-  line-height: 20px;
-  text-align: center;
-}
-select.exclude-from-playback.required {
-  width: 306px;
-  height: 44px;
-  padding: 0 10px;
-  color: #00234B;
-  background-color: #dce7f2;
-  border: transparent;
-  border-radius: 3px;
-  margin: 14px auto 20px;
-}
-sup.design_star {
-  color: red;
-  font-weight: 1000;
-  font-size: 14px;
-}
-a.login__button {
-  color: #fff !important;
-  font-weight: 1000;
-  padding: 10px;
-  background: #06b09a;
-  cursor: pointer;
-}
-/*02-05-2019 End joinzocDoc*/
-
-/*09May2019 start career Page*/
-img.header_logo.new__logo {position: relative;left: 14%;}
-.list_header{background: url(assets/images/career_image/career_images.jpg)no-repeat; background-size:cover; padding:200px 0; }
-.list_header h2{    font-size: 48px;line-height: 1.14;font-family: sharp-sans-bold;max-width: 754px;
-  color: #fff;padding: 2px 0;    background: #27baa7;box-shadow: 10px 0 0 #27baa7, -10px 0 0 #27baa7;
-  box-shadow: 10px 0 0 #27baa7, -10px 0 0 #27baa7; display: block;}
-  .list_header .btn-view{outline: 0; background-image: none; text-shadow: none; color: #27baa7; background-color: #fef25c;
-  cursor: pointer; padding: 15px 30px; font-size: 20px; -webkit-transition: .2s all ease-out; transition: .2s all ease-out; display: inherit; margin-left: -10px; margin-top: 20px; font-size: 20px;
-  line-height: 2.4rem; font-family: sharp-sans-bold; width: 170px;}
-	.mission_heading{    font-size: 36px;
-  line-height: 1.25;
-  color: #27baa7;
-  text-align: left;    padding-bottom: 27px;}
-  #mission_content{padding: 50px 0;}
-.inner_heading{    font-size: 24px;
-  line-height: 28px;
-  padding-bottom: 9px;
-  color: #27baa7;}
-#mission_content p{font-size: 16px;
-  line-height: 1.4;
-  font-family: 'sharp-sans-medium',Arial,sans-serif;
-      color: #000;}
-  .perk ul{list-style-type: none; columns: 2;}
-  .perk ul li{margin-bottom: 15px;}
-  .job_open a{    font-family: 'sharp-sans-medium',Arial,sans-serif;
-    color: #27baa7;
-    display: block; font-size:18px; margin-bottom:10px;}
-    .job_open{margin-bottom:30px;}
-    .container a:hover.btn-view {
-      background: #27baa7;
-      color: #fff;
-      text-decoration: none;
-  }
-	
-
-
-
-
-
-
-
-
-
-
-
-/*end*/
-/* MEDIA QUERY */
-@media(max-width: 1199px){
-#hospital_schedule .box a{font-size: 14px;}
-#hospital_schedule .box p{max-height: 85px;}
-.download_app_left ul li:last-child, .download_app_left{padding-top: 0}
-}
-
-@media(max-width: 991px){
-#hospital_schedule .box{padding: 30px 20px;}
-#hospital_schedule .box a{padding: 10px 15px;}
-.download_app_left h2, .feature_right h2,.middle_header h1, .patients_testimonial h2, .job_text h2{font-size:42px;}
-.smart_btn{display: flex;padding-bottom: 10px;}
-.smart_btn a:first-child{padding-right: 10px;}
-
-
-}
-@media(max-width: 767px)
-{
-.middle_header{padding-top: 100px;}
-#hospital_schedule .box{margin-bottom:15px;}
-#hospital_schedule .box p{max-height: 100%; height: auto;}
-#download_app .app{display: flex; flex-direction: column-reverse;}
-.middle_header .form-group{display: block;}
-.middle_header .form-group input{max-width: 100%;}
-.middle_header .form-group .btn{margin-top: 10px;}
-.copyright .copy_section{display: block; text-align: center;}
-.copyright .copy_section ul{justify-content: space-between;}
-.footer_img{display: inline-block;}
-.download_app_left h2, .feature_right h2, .middle_header h1, .patients_testimonial h2, .job_text h2{font-size: 36px;}
-}
-
-@media(max-width: 480px){
-.top_header{display: block;}
-.top_right ul{justify-content: center;}
-.top_right ul li a{font-size: 13px; padding: 10px 20px;}
-.logo{text-align: center;padding-bottom: 10px;}
-.middle_header{padding-top: 50px;}
-.copyright .copy_section ul a{margin: 0px 13px;}
-
-}
+@import "assets/css/style.css";
 
 
