--- a/src/app/about/career-list/career-image/career-image.component.html
+++ b/src/app/about/career-list/career-image/career-image.component.html
@@ -3,7 +3,7 @@
     <div class="content">
       <div class="container">
       <h2>Join us, and help transform healthcare for everyone.</h2>
-      <a href="#" class="btn-view">View all jobs</a>
+      <a routerLink="/about/career-list" class="btn-view">View all jobs</a>
     </div>
     </div> 
   </article>
