--- a/src/app/about/career-list/career-mission/career-mission.component.html
+++ b/src/app/about/career-list/career-mission/career-mission.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="about_mission">
       <h2 class="mission_heading"> Our Mission </h2>
-      <p>Zocdoc is the tech company at the beginning of a better healthcare experience. Every day, we are driven by our mission to give power to the patient, building products and services that simplify and streamline the overall healthcare journey for patients and providers, delivering the modern healthcare experience they expect and deserve.</p>
+      <p>DocApp is the tech company at the beginning of a better healthcare experience. Every day, we are driven by our mission to give power to the patient, building products and services that simplify and streamline the overall healthcare journey for patients and providers, delivering the modern healthcare experience they expect and deserve.</p>
       <p>Our forward-thinking approach prioritizes collaboration, agility, and continuous learning in service of our long-term vision. This has helped us drive significant innovation in a complex, slow-moving industry, and our talented team is looking for impact-minded individuals to join us as we continue to re-imagine the healthcare experience.</p>
     </div>
     <div class="guide_us">
@@ -53,7 +53,7 @@
           <h2 class="mission_heading">We have 27 job openings in 3 main locations.</h2>
           <h6 class="inner_heading">Business Operations</h6>
           <div class="row">
-            <div class="col-md-6"><a href="Business Operations & Strategy Analyst">Business Operations & Strategy Analyst</a></div>
+            <div class="col-md-6"><a>Business Operations & Strategy Analyst</a></div>
             <div class="col-md-6">New York, NY</div>
           </div>
         </div>
@@ -61,18 +61,48 @@
             <h2 class="mission_heading">Data Science, Data Engineering, and Business Intelligence</h2>
             <h6 class="inner_heading">Business Operations</h6>
             <div class="row">
-              <div class="col-md-6"><a href="Business Operations & Strategy Analyst">Principal Software Engineer - Data Platform</a></div>
+              <div class="col-md-6"><a>Principal Software Engineer - Data Platform</a></div>
               <div class="col-md-6">New York, NY</div>
             </div>
             <div class="row">
-                <div class="col-md-6"><a href="Business Operations & Strategy Analyst">Senior Business Intelligence Analyst</a></div>
+                <div class="col-md-6"><a>Senior Business Intelligence Analyst</a></div>
                 <div class="col-md-6">New York, NY</div>
               </div>
               <div class="row">
-                  <div class="col-md-6"><a href="Business Operations & Strategy Analyst">Senior Software Engineer - Data</a></div>
+                  <div class="col-md-6"><a>Senior Software Engineer - Data</a></div>
                   <div class="col-md-6">New York, NY</div>
                 </div>
 
+          </div>
+          <div class="job_open">
+            <h2 class="mission_heading">Engineering</h2>
+            <div class="row">
+              <div class="col-md-6"><a>Engineering Manager</a></div>
+              <div class="col-md-6">New York, NY</div>
+            </div>
+            <div class="row">
+                <div class="col-md-6"><a>Integration Support Associate</a></div>
+                <div class="col-md-6">New York, NY</div>
+              </div>
+              <div class="row">
+                  <div class="col-md-6"><a>Integration Support Associate</a></div>
+                  <div class="col-md-6">New York, NY</div>
+                </div>
+                <div class="row">
+                  <div class="col-md-6"><a>Senior Software Engineer - Full Stack</a></div>
+                  <div class="col-md-6">New York, NY</div>
+                </div>
+                <div class="row">
+                  <div class="col-md-6"><a>Software Engineer</a></div>
+                  <div class="col-md-6">New York, NY</div>
+                </div>
+          </div>
+          <div class="job_open">
+            <h2 class="mission_heading">Freelance Photographer</h2>
+            <div class="row">
+              <div class="col-md-6"><a>Freelance Photographer - San Jose, CA</a></div>
+              <div class="col-md-6">San Jose, CA</div>
+            </div>
           </div>
     </div>
   </div>
