--- a/src/app/about/joinzocdoc/join-form/join-form.component.html
+++ b/src/app/about/joinzocdoc/join-form/join-form.component.html
@@ -31,7 +31,7 @@
                 </div>
                 <div class="oneField field-container-D">
                     <label  class="label preField reqMark">Your Direct Phone Number<sup class="design_star">*</sup></label>
-                    <div class="inputWrapper"><input type="text"  name="lastname" value="" aria-required="true" title="First Name" data-dataset-allow-free-responses="" class="exclude-from-playback required"></div>
+                    <div class="inputWrapper"><input type="text" autoformat="###-###-####" name="lastname" value="" aria-required="true" title="First Name" data-dataset-allow-free-responses="" class="exclude-from-playback required"></div>
                 </div>
            </div>
            <div class="row">
