--- a/src/app/about/joinzocdoc/join-patients/join-patients.component.html
+++ b/src/app/about/joinzocdoc/join-patients/join-patients.component.html
@@ -2,13 +2,13 @@
   <div class="hero-row row max-width">
       <div class="text-col col-sm order-sm-last zocdoc_content">
           <h1>Get more new patients</h1>
-          <h2>Zocdoc helps practices replace the portion of their patient panel they naturally lose every year.</h2>
+          <h2>DocApp helps practices replace the portion of their patient panel they naturally lose every year.</h2>
           <div class="cta-container">
-              <a [scrollTo]="'#target'" [scrollDuration]="1000" class="cta">List your practice on Zocdoc</a>
+              <a [scrollTo]="'#target'" [scrollDuration]="1000" class="cta">List your practice on DocApp</a>
           </div>
       </div>
       <div class="image-col col-sm order-sm-first">
-          <img class="img-fluid" src="assets/images/join_images/new-join-hero.jpg">
+          <img class="img-fluid" src="assets/images/join_images/new-join-hero.jpg" alt="DocApp">
       </div>
   </div>
 </section>
