--- a/src/app/about/joinzocdoc/joinzocdoc.component.html
+++ b/src/app/about/joinzocdoc/joinzocdoc.component.html
@@ -1,9 +1,9 @@
 <div class="container-fluid new-join-header">
   <div class="header-container row">
       <div class="header-col col-sm">
-        <div _ngcontent-c2="" class="logo"><a _ngcontent-c2="" routerLink="/home"><img class="header_logo" src="assets/images/spo-simple-logo.png" alt="ZocDoc Logo"></a></div>
+        <div  class="logo"><a routerLink="/home"><img class="header_logo" src="assets/images/spo-simple-logo.png" alt="DocApp Logo"></a></div>
           <div class="cta-container">
-              <a [scrollTo]="'#target'" [scrollDuration]="1000"  class="cta">List your practice on Zocdoc</a>
+              <a [scrollTo]="'#target'" [scrollDuration]="1000"  class="cta">List your practice on DocApp</a>
           </div>
       </div>
   </div>
