--- a/src/app/about/joinzocdoc/love-zocdoc/love-zocdoc.component.html
+++ b/src/app/about/joinzocdoc/love-zocdoc/love-zocdoc.component.html
@@ -1,7 +1,7 @@
 <section class="container-fluid new-join-value-props love-zocdoc" style="background-color: #f4f4f4">
   <div class="hero-row row max-width">
       <div class="col-sm text-center new_join__text">
-          <h2>Why providers love Zocdoc</h2>
+          <h2>Why providers love DocApp</h2>
       </div>
    </div>
          <div class="values-row row max-width">
@@ -13,7 +13,7 @@
             </div>
          <div class="row max-width">
            <div class="cta-container list__zocdoc">
-            <a [scrollTo]="'#target'" [scrollDuration]="1000" class="cta">List your practice on Zocdoc</a>
+            <a [scrollTo]="'#target'" [scrollDuration]="1000" class="cta">List your practice on DocApp</a>
            </div>
   </div>
 </section>
