--- a/src/app/about/joinzocdoc/provider-zocdoc/provider-zocdoc.component.html
+++ b/src/app/about/joinzocdoc/provider-zocdoc/provider-zocdoc.component.html
@@ -1,10 +1,10 @@
-<section class="container-fluid new-join-hero provider_zocdoc">
+<section class="container-fluid new-join-hero provider_docapp">
     <div class="container-fluid new-join-providers">
       <div class="col-sm text-center new_join__text">
-        <h2>Provider thrive with Zocdoc</h2>
+        <h2>Provider thrive with DocApp</h2>
       </div>
       <div class="conatiner new-join-card">
-        <div class="card new-card"  *ngFor="let provider of provider_zocdoc">
+        <div class="card new-card"  *ngFor="let provider of provider_docapp">
           <div class="description">
             <img [src]="provider.image" alt="card-logo">
             <p class="doctor_name">
@@ -18,7 +18,7 @@
          </div>
       </div>
        <div class="cta-container">
-        <a [scrollTo]="'#target'" [scrollDuration]="1000" class="cta">List your practice on Zocdoc</a>
+        <a [scrollTo]="'#target'" [scrollDuration]="1000" class="cta">List your practice on DocApp</a>
         </div>
     </div>
   </section>
