--- a/src/app/about/joinzocdoc/slider/slider.component.html
+++ b/src/app/about/joinzocdoc/slider/slider.component.html
@@ -1,5 +1,5 @@
-<owl-carousel  [options]="myCarouselOptions" [items]="joinzocdoc" [carouselClasses]="['owl-theme', 'sliding','row']" >
-  <div class="item" *ngFor="let image of joinzocdoc ; let i = index">
+<owl-carousel  [options]="myCarouselOptions" [items]="joindocapp" [carouselClasses]="['owl-theme', 'sliding','row']" >
+  <div class="item" *ngFor="let image of joindocapp ; let i = index">
    <div class="col order-md-last content__image">
      <img class="image__slide" src={{image.image}}/>
    </div>
