--- a/src/app/about/joinzocdoc/zocdoc-provider/zocdoc-provider.component.html
+++ b/src/app/about/joinzocdoc/zocdoc-provider/zocdoc-provider.component.html
@@ -1,12 +1,12 @@
 <section class="container-fluid new-join-carousel zocdocs_provider">
   <div class="hero-row row max-width">
      <div class="col-sm text-center">
-        <h2 class="zocdoc__heading">What is Zocdoc?</h2>
+        <h2 class="zocdoc__heading">What is DocApp?</h2>
      </div>
   </div>
   <app-join-slider></app-join-slider>
 <div class="cta-container">
-  <a [scrollTo]="'#target'" [scrollDuration]="1000" class="cta">List your practice on Zocdoc</a>
+  <a [scrollTo]="'#target'" [scrollDuration]="1000" class="cta">List your practice on DocApp</a>
 </div>
 <img class="img-fluid green-blob" src="assets/images/join_images/right_green_blob.png" alt="">
 </section>
