--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,9 +9,9 @@
           <ul>
              <!-- <li><a routeLink="[routes.linkName]">{{routes.url}}</a></li> -->
                   <li> <a routerLink="/home" class="nav-link" >Home</a></li>
-                  <li> <a routerLink="/services" class="nav-link">Service</a></li>
                   <li> <a routerLink="/about" class="nav-link">About</a></li>
-              <div ngbDropdown class="d-inline-block show__menu">
+                  <li> <a routerLink="/patient/s" class="nav-link">faq</a></li>
+                 <div ngbDropdown class="d-inline-block show__menu">
                   <li> <a id="dropdownBasics" ngbDropdownToggle>Login/SignUp</a></li>
                  <div ngbDropdownMenu aria-labelledby="dropdownBasics">
                    <ul>
