--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -1,7 +1,5 @@
 <app-header></app-header>
 <main>
-<p>
-  services works!
-</p>
+ <app-faq-patients></app-faq-patients>
 </main>
 <app-footer></app-footer>
