--- a/src/app/services/faq-patients/faq-patients.component.html
+++ b/src/app/services/faq-patients/faq-patients.component.html
@@ -5,31 +5,31 @@
     <div class="row inner_tabs">
       <div class="col-md-4 feature-box">
         <div class="fe_box text-center">
-          <img src="https://img.icons8.com/metro/90/000000/medical-doctor.png">
+          <img src="assets/images/faq_images/medical-doctor.png">
         <h6 class="text-center">About Docapp</h6>
         </div>
       </div>
       <div class="col-md-4 feature-box">
         <div class="fe_box text-center">
-          <img src="https://img.icons8.com/metro/90/000000/privacy.png">
+          <img src="assets/images/faq_images/privacy.png">
         <h6 class="text-center">Data & Privacy</h6>
         </div>
       </div>
       <div class="col-md-4 feature-box">
         <div class="fe_box text-center">
-          <img src="https://img.icons8.com/metro/90/000000/calendar.png">
+          <img src="assets/images/faq_images/calendar.png">
         <h6 class="text-center">Appointments</h6>
         </div>
       </div>
       <div class="col-md-4 feature-box">
         <div class="fe_box text-center">
-          <img src="https://img.icons8.com/metro/90/000000/accounting.png">
+          <img src="assets/images/faq_images/accounting.png">
         <h6 class="text-center">Account</h6>
         </div>
       </div>
       <div class="col-md-4 feature-box">
         <div class="fe_box text-center">
-          <img src="https://img.icons8.com/metro/90/000000/fine-print.png">
+          <img src="assets/images/faq_images/fine-print.png">
         <h6 class="text-center">Reviews</h6>
       </div>
       </div>
