--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<ng2-slim-loading-bar [color]="'darkred'" [height]="'10px'"></ng2-slim-loading-bar>
+<ng2-slim-loading-bar [color]="'rgba(6, 176, 154, 1)'" [height]="'10px'"></ng2-slim-loading-bar>
 <router-outlet></router-outlet>
 
 
