--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -12,10 +12,10 @@
         <div class="col-md-2 col-sm-12">
          <h3>About</h3>
          <ul>
-           <li><a href="#">Home</a></li>
-           <li><a href="#">About</a></li>
-           <li><a href="#">Press</a></li>
-           <li><a href="#">Careers</a></li>
+           <li><a routerLink="/home">Home</a></li>
+           <li><a routerLink="/about">About</a></li>
+           <li><a routerLink="/patient/s">Press</a></li>
+           <li><a [routerLink]="['/about/career-list/']">Careers</a></li>
            <li><a href="#">Contact</a></li>
            <li><a href="#">Help</a></li>
            <li><a href="#">Blogs</a></li>
