--- a/src/app/registration-form/registration-form.component.html
+++ b/src/app/registration-form/registration-form.component.html
@@ -1,4 +1,5 @@
-<p>{{message}}</p><a class="login__button" *ngIf="show" (click)="open(content)">Click here to Login</a>
+
+<p>{{message}}</p><a class="login__here" *ngIf="show" (click)="open(content)">Click here to Login</a>
 <ng-template #content let-c="close">
     <div class="container">
     <div class="modal_popup">
@@ -11,10 +12,10 @@
       </div>
     </div>
   </ng-template>
-<div class="jumbotron">
-  <div class="row">   
+  <div class="container">
+  <div class="row inner_modal">   
       <div class="col-md-12">
-          <span class="heading"><h3>ZocDoc</h3></span>
+          <span class="heading"><h3>DocApp</h3></span>
           <form [formGroup]="registerForm" >
             <div class="form-group">
                 <label>First Name</label>
